<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MealToHome</string>


    <string name="meal_to_home_01">Meal To Home</string>
    <string name="enter_details">Enter Details</string>
    <string name="name_01">Name :</string>
    <string name="address_01">Address :</string>
    <string name="location_01">Location :</string>
    <string name="contact_no">Contact no :</string>
    <string name="cancle">Cancle</string>

    <string name="meal_to_home_02">Meal To Home</string>
    <string name="dilivery_details">Dilivery Details</string>
    <string name="date_01">Date :</string>
    <string name="name_02">Name :</string>
    <string name="address">Address :</string>
    <string name="address1">Address Line 1:</string>
    <string name="address2">Address Line 2 :</string>
    <string name="location">Location :</string>
    <string name="make_payment">MAKE PAYMENT</string>

    <string name="meal_to_home_03">Meal To Home</string>
    <string name="payment">Payment</string>
    <string name="meal_to_home_04">Meal To Home</string>
    <string name="chose_a_yayment_method">Chose a Payment method</string>
    <string name="visa">Visa</string>
    <string name="master">Master</string>
    <string name="name_03">Name :</string>
    <string name="amount_01">Amount :</string>

    <string name="meal_to_home_05">Meal To Home</string>
    <string name="enter_card_details">Enter Card Details</string>
    <string name="name">Name :</string>
    <string name="card_no">Card No :</string>
    <string name="xxxx_xxxx_xxxx_xxxx">XXXX-XXXX-XXXX-XXXX</string>
    <string name="securitv_code">Securitv Code :</string>
    <string name="cvn">CVN</string>
    <string name="expired_date">Expired Date :</string>
    <string name="pay3">PAY</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>

    <string name="payment_success_06">Payment Success</string>
    <string name="thank_you_for_your_payment">Thank you for your payment.</string>
    <string name="payment_information">Payment Information</string>
    <string name="date_02">Date :</string>
    <string name="status">Status :</string>
    <string name="payment_method">Payment Method :</string>
    <string name="amount">Amount :</string>
    <string name="amiunt">Amiunt :</string>
    <string name="date">Date :</string>
    <string name="meal_to_home">Meal To Home</string>
    <string name="cash">CASH</string>
    <string name="card">CARD</string>
    <string name="pay">PAY</string>


    <string name="order_details">ORDER DETAILS</string>
    <string name="order_payment_details">ORDER PAYMENT METHOD DETAILS</string>
    <string name="food_name">Food Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">1 Price</string>
    <string name="total">Total</string>
    <string name="my_style_chicken_fride_rice">My style chicken fride rice</string>
    <string name="_1_add">+</string>
    <string name="_1_dic">-</string>
    <string name="rs_200_00">Rs.200.00</string>
    <string name="spaghetti">Spaghetti</string>
    <string name="rs_440_00">Rs.440.00</string>
    <string name="total_bill">Total Bill</string>
    <string name="rs_640_00">Rs.640.00</string>
    <string name="rs_00_00">00.00</string>
    <string name="done">DONE</string>
    <string name="payOder">Pay for Oder</string>
    <string name="let_s_start_ordering">LET\'S START ORDERING</string>
    <string name="deliver">DELIVER</string>
    <string name="take_away">TAKE AWAY</string>
    <string name="select_branch">Select branch</string>
    <string name="submit">SUBMIT</string>
    <string name="order_required_time">Order required time:</string>
    <string name="id_no">Order ID No:</string>
    <string name="rs">Rs.</string>

    <string name="customer_order_history">CUSTOMER ORDER HISTORY</string>
    <string name="payment_history">PAYMENT HISTORY</string>
    <string name="order_type">Order type</string>

    <string name="order_description">Order description</string>
    <string name="delivery">Delivery</string>
    <string name="_05_08_21">05/08/21</string>
    <string name="vegitable_rice_rs_200_00">Vegitable Rice Rs.200.00</string>
    <string name="takeaway">Takeaway</string>
    <string name="_06_08_21">06/08/21</string>
    <string name="chicken_rice_rs_300_00">Chicken Rice Rs.300.00</string>
    <string name="_07_08_21">07/08/21</string>
    <string name="pizza_rs_200_00">Pizza Rs.200.00</string>
    <string name="_08_08_21">08/08/21</string>
    <string name="burger_rs_200_00">Burger Rs.200.00</string>


    <string name="meal_to_home1">Meal To Home</string>
    <string name="meal_to_home2">Meal To Home</string>
    <string name="next1">Next</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="meal_to_home3">Meal To Home</string>
    <string name="code">Code</string>
    <string name="enter_customer_code">Enter Confirmation Code</string>
    <string name="re_send_code">Re send code</string>
    <string name="next2">Next</string>
    <string name="meal_to_home4">Meal To Home</string>
    <string name="password">********</string>
    <string name="customer_email_address">dashunf@gmail.com</string>
    <string name="customer_phone">000 000 0000</string>
    <string name="signUp_msg">Not a Member? Sign up Now</string>
    <string name="signIn_msg">Already Registered? Sign In Now</string>
    <string name="enter_your_name">Enter your name</string>
    <!--    <string name="name">Name</string>-->
    <string name="password_test">Password</string>
    <string name="email_address">Email Address</string>
    <string name="phone">Mobile Number :</string>
    <string name="fName">Full Name</string>
    <string name="lName">Last Name</string>
    <string name="next">Next</string>
    <string name="get_OTP">Get OTP</string>
    <string name="verify_OTP">Verify OTP</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="update">Update</string>
    <string name="delete_account">Delete My Account</string>
    <string name="meal_to_home5">Meal To Home</string>
    <string name="sri_lankan1">Sri Lankan</string>
    <string name="indian1">Indian</string>
    <string name="italian1">Italian</string>
    <string name="chinese1">chinese</string>
    <string name="my_style_chicken_fried_rice_rs_200_00">My style chicken fried rice Rs_200_00</string>
    <string name="gallic_butter_carbs_rs_4200_00">Gallic butter carbs Rs_4200_00</string>
    <string name="spaghetti_rs_440_00">Spaghetti Rs 440.00</string>
    <!--    <string name="grallic_butter_carbs_rs_4200_00">Grallic butter carbs Rs 4200_00</string>-->
    <!--    <string name="my_style_chicken_fride_rice_rs_200_00">My style chicken fride rice Rs 200_00</string>-->
    <string name="india1">India Full rice Rs 200_00</string>
    <string name="india2">India Rotee rice Rs 300_00</string>
    <string name="india3">India Curry rice Rs 100_00</string>
    <string name="italians1">Italian Pizza Rs 1200_00</string>
    <string name="italians2">Italian Pasta Rs 1500_00</string>
    <string name="italians3">Italian Noddles Rs 1300_00</string>
    <string name="chines1">Chines Rice Rs 700_00</string>
    <string name="chines2">Chines Noddles Rs 1000_00</string>
    <string name="chines3">Chines curries Rs 1300_00</string>
    <!--    <string name="basmathi_rice_chiken_deval_fry_onion_chily_paste_vegetable_chopsy">basmathi rice chiken deval fry onion chily paste vegetable chopsy</string>-->
    <string name="view1">View</string>
    <string name="view2">View</string>
    <string name="view3">View</string>
    <string name="meal_to_home6">Meal To Home</string>
    <string name="sri_lankan2">Sri Lankan</string>
    <string name="indian2">Indian</string>
    <string name="italian2">Italian</string>
    <string name="chinese2">chinese</string>
    <string name="my_style_chicken_fried_rice">My Style chicken fried rice</string>
    <string name="basmathi_rice_chicken_devel_fry_onion_chilly_paste_vegetable_chopsy">Basmathi rice Chicken Devel Fry onion Chilly paste Vegetable chopsy</string>
    <string name="recipe_for_getting">Recipe For Getting</string>
    <string name="order">ORDER</string>
    <string name="add_to_favorites">ADD TO FAVORITES</string>
    <!--    <string name="rs_200_00">Rs 200.00</string>-->
    <!--    <string name="meal_to_home">Meal To Home</string>-->
    <string name="sri_lankan">Sri Lankan</string>
    <string name="indian">Indian</string>
    <string name="italian">Italian</string>
    <string name="chinese">chinese</string>
    <string name="favorites">FAVORITES</string>
    <string name="grilled_bbq_chicken">Grilled BBQ chicken</string>
    <string name="egg_salad_sandwich">Egg Salad Sandwich</string>
    <string name="view4">View</string>
    <string name="view5">View</string>

    <string name="leave_a_feedback">Leave a feedback</string>
    <string name="feedback">Feedback</string>
    <string name="take_a_minute_to_write_a_review">take a minute to write a review</string>
    <string name="tell_us_what_you_feel">tell us what you feel</string>
    <!--    <string name="submit">Submit</string>-->
    <string name="contct_us">CONTCT US</string>
    <string name="e_mail">email:</string>
    <string name="message">Message:</string>
    <string name="send_message">SEND MESSAGE</string>
    <string name="_94764545678">+94764545678</string>
    <string name="FName">Kamal Perera</string>
    <string name="LName">Perera</string>
    <string name="mealyohome_gmail_com">mealyohome@gmail.com</string>
    <string name="thank_you_we_will_be_touch_in_shortly">Thank You!.. We will be touch in shortly</string>
    <string name="thankyou">Thank You! </string>
    <string name="thank_you_message">We will be in touch<br></br> with you shortly</string>
    <string name="back_to_home">Back To Home</string>
    <string name="rate_the_delivery">Rate the Delivery</string>
    <string name="my_style_chicken_fride_rice_rs_200_00">My Style Chichek Fried Rice</string>
    <string name="grallic_butter_carbs_rs_4200_00">Garlic Butter Crabs Rs.4200.00</string>
    <string name="basmathi_rice_chiken_deval_fry_onion_chily_paste_vegetable_chopsy">Basmati Rice Chicken Deval Fry Onion Chily Paste Vegetable Chopsy</string>


</resources>

